# rxflow_ai

./: .gitignore  I10_Recommendation_Engine_Documentation.md  I12_Action_Tracking_Documentation.md  I13_Outcomes_Documentation.md  I14_Ops_Work_Queue_Documentation.md  I15_Case_Drilldown_Documentation.md  I16_Executive_Savings_Dashboard_Documentation.md  I17_Synthetic_Scenarios_Documentation.md  I18_Parameterized_Distributions_Documentation.md  I19_Simulation_Replay_Documentation.md  I1_Canonical_Event_Schema_Documentation.md  I20_Pseudonymization_Enforcement_Documentation.md  I21_PHI_Denylist_Documentation.md  I22_Lineage_Completeness_Documentation.md  I2_Ingestion_API_Documentation.md  I3_Status_Mapping_Documentation.md  I4_Snapshot_Aggregation_Documentation.md  I5_Bundle_Metrics_Documentation.md  I6_Risk_Scoring_Documentation.md  I7_Shipment_Risk_Documentation.md  I8_Explainability_Layer_Documentation.md  I9_Versioning_Documentation.md  PharmIQ_ADO_Epics_Issues.csv  PharmIQ_spec.md  README.md  pyproject.toml  requirements.txt
ado-mcp/: index.js  package-lock.json  package.json  test-mcp.json
src/: __init__.py
src/actions/: __init__.py  action_tracking_engine.py
src/aggregation/: __init__.py  snapshot_engine.py
src/case_drilldown/: __init__.py  case_drilldown_engine.py
src/executive_dashboard/: __init__.py  executive_dashboard_engine.py
src/explainability/: __init__.py  explainability_engine.py
src/guardrails/: __init__.py  guardrail_engine.py
src/ingestion/: __init__.py  api.py  processors.py
src/mapping/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py
(+71 files in other folders)
